<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/weatherLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint=" location (city/country) "
        android:inputType="textCapWords"
        android:paddingTop="10sp" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="50sp"
            android:weightSum="100" >

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/radio10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/doC" />

                <RadioButton
                    android:id="@+id/radio11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doF" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/radio20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="m/s" />

                <RadioButton
                    android:id="@+id/radio21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="mp/h" />
            </RadioGroup>
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10sp"
            android:paddingTop="10sp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/setting_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/textsetting" />

                <requestFocus />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>